# pholyglot

./: .gitignore  README.md  polyglot.c  polyglot.php
anagram/: anagram.c  anagram.php  clone.c  clone.php  file.c  generic.c  generictricks.c  hash.c  hashtest.c  mixed.c  phollylib.c  php_streams.h
array/: Makefile  arr.php  array.c  array2.c  array3.c  array4.c  array5.c  array6.c  foreach.c  slice.c
astar/: astar.java
basicio/: Makefile  config.ini  fwrite.php  polyglot.c  polyglot.php
escape/: Makefile  region.php  test.c  tuple.php
function/: test.c
list/: arena.c  clone.php  list.c  list.php  phollylib.c
m4/: Makefile  m4.c  m4.php
mandelbrot/: mandelbrot1.php  mandelbrot2.php
mem/: generic.c  generic.php  poly.c
oop/: Makefile  def.c  dollar.c  goto.c  goto.php  name.c  new.php  oop.c  oop.php  test.c  test.php  trivial.c  typedef.c
pholly/: Makefile  _test.c  _test.php  adv.php  lib.c  my_test.c  nbody.php  nbody_orig.php  phollylib.c  test.php
psalmtest/: composer.json
psalmtest/src/: spldoublylinkedlist.php
src/: Makefile  README.md  ast.ml  dune  dune-project  lexer.mll  parser.mly  test1.php
src/lib/: Escape.ml  Infer.ml  InferAllocStrat.ml  Namespace.ml  ast.ml  diff.txt  diff2.txt  docblocklexer.mll  docblockparser.mly  dune  lexer.mll  parser.conflicts  parser.mly  pholyglot.ml  pholyglot_ast.ml  test.ml  test_alloc.ml  test_array.ml  test_arrayobject_hash.ml  test_class.ml  test_clone.ml  test_escape.ml  test_list.ml  test_malloc.ml  transpile.ml
src/test/: dune  (+1 more)
string/: Makefile  README.md  string.c  string2.c  string3.c
