(library
 (libraries base stdio str re dolog expect_test_helpers_kernel oseq)
 (preprocess (pps ppx_deriving.show ppx_deriving.ord ppx_inline_test ppx_assert ppx_expect ppx_compare ppx_sexp_conv))
 (inline_tests)
 (name pholyglot))

(ocamllex
  (modules lexer docblocklexer))

(menhir
  (modules parser docblockparser))

(env
  (dev
    (flags (:standard -warn-error -A))))
